@@ -1,0 +1,3 @@
+libogg-0.dll
+libvorbis-0.dll
+libvorbisfile-3.dll
