@@ -3,11 +3,13 @@ HISTORY OF LGCK BUILDER
 *** 0.6.0.8
 
 - EDITOR: added portable option to package bundle (windows)
-- EDITOR: added export game dialog
+- EDITOR: added export game UI dialog
 - EDITOR; replaced setup from InnoSetup with AdvancedInstaller
 - EDITOR: added manifests to satisfy windows app cert kit
 - EDITOR: new warnings for no player and no goal
 - EDITOR: lgck-builder and obl5edit can now be associated with files
+- EDITOR: tigher integration between lgck builder and obl5edit
+- ENGINE: SFML runtime completed
 - TOOLS: migrated gui to qt 5.10.1
 - BUG FIX: ScriptWiz displayed incorrectly in Windows
 - BUG FIX: uninitialized font causing game to crash (critical) introduced in 0.6.0.6
